--- a/src/pages/PageNotFound/PageNotFound.module.scss
+++ b/src/pages/PageNotFound/PageNotFound.module.scss
@@ -7,8 +7,8 @@ $pnf-height: calc(100vh - 70px);
 	justify-content: center;
 	height: $pnf-height;
 	img {
-		width: var(--bt-size-percent-100);
-		height: var(--bt-size-percent-100);
+		width: var(--rjst-size-percent-100);
+		height: var(--rjst-size-percent-100);
 		object-fit: cover;
 	}
 }
